# licode

./: .gitignore
erizo/src/erizo/: CMakeLists.txt
erizoAPI/: binding.gyp
erizo_controller/: installErizo_controller.sh
erizo_controller/erizoClient/src/: Room.js
erizo_controller/erizoClient/src/views/: Bar.js  View.js
erizo_controller/erizoClient/tools/: compile.sh
erizo_controller/erizoController/: erizoController.js  logger.js  webRtcController.js
erizo_controller/erizoController/rpc/: rpc.js
nuve/: installNuve.sh
nuve/nuveAPI/: cloudHandler.js
nuve/nuveAPI/mdb/: dataBase.js  roomRegistry.js  serviceRegistry.js  tokenRegistry.js
nuve/nuveAPI/resource/: tokensResource.js
nuve/nuveAPI/rpc/: rpc.js
nuve/nuveClient/tools/: compile.sh  compileDist.sh
scripts/: common-debian-functions  installErizo.sh  installMacDeps.sh  installNuve.sh  installRaspbianStack.sh  installTravisDeps.sh  licode_default.js
